# digital-link-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  bacon.toml  justfile  package.json
examples/: parse.rs
src/: lib.rs
src/model/: data_attributes.rs  digital_link.rs  error.rs  gs1path.rs  mod.rs
src/model/wasm/: gs1path.rs  mod.rs
src/parser/: data_attributes.rs  gs1path.rs  macros.rs  mod.rs  primary_key.rs  primitive.rs  qualifier.rs
src/parser/snapshots/: digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_1.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_10.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_11.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_2.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_3.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_4.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_5.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_6.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_7.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_8.snap  digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_9.snap  digital_link_rs__parser__gs1path__tests__should_not_accept_root_path.snap  digital_link_rs__parser__primitive__hash_should_not_be_xsymbol.snap  digital_link_rs__parser__primitive__tests__colon_should_not_be_xchar.snap  (+5 more)
tests/: parse.rs
