[package]
name = "digital-link-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
assert_matches = "1.5.0"
insta = { version = "1.31.0", features = ["yaml"] }
js-sys = "0.3.64"
nom = "7.1.3"
paste = "1.0.14"
thiserror = "1.0.47"
url = "2.4.0"
wasm-bindgen = "0.2.87"
